Fixed form max-width to avoid text overlap with icon

--- a/client/src/app/components/chat/chat.component.scss
+++ b/client/src/app/components/chat/chat.component.scss
@@ -95,6 +95,7 @@
 
 input[matInput] {
     width: 100%;
+    max-width: 17vw;
 }
 
 #chat-send-icon {
